# kklocalagent

./: .env.example  .gitignore  README.md  compose.cpu.yaml  compose.yaml
agent/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt  sandbox.py  test_sandbox.py  tools.py
agent/experiments/: chat_repl.py  tool_calling_probe.py
audio-io/: Cargo.toml  README.md  config.example.toml
audio-io/examples/: aec_offline.rs
audio-io/src/: aec.rs  capture.rs  config.rs  framer.rs  http.rs  lib.rs  main.rs  playback.rs  service.rs  state.rs  ws.rs
audio-io/tests/: integration.rs
automatic-speech-recognition/: Dockerfile  README.md  entrypoint.sh  fetch-models.sh
automatic-speech-recognition/test/: .env.example  README.md  compose.offline.yaml  compose.online.gpu.yaml  compose.online.yaml  compose.yaml  fetch-sample-ja.sh  fetch-sample.sh  vad-config.toml
automatic-speech-recognition/test/mic-stub/: Dockerfile  stub.py
llm/: Dockerfile  README.md  init.sh
llm/test/: README.md  compose.cpu.yaml  compose.gpu.yaml  compose.yaml
orchestrator/: Cargo.toml  Dockerfile  README.md  config.example.toml
orchestrator/src/: config.rs  events.rs  lib.rs  main.rs  pipeline.rs  service.rs  state.rs
orchestrator/test/: Dockerfile.probe  README.md  compose.yaml  probe.py  test.sh
orchestrator/test/harness/: Dockerfile  harness.py
orchestrator/test/integration/: README.md  compose.yaml
orchestrator/test/integration/assert/: Dockerfile  assert.py
orchestrator/test/integration/mic-stub/: Dockerfile
orchestrator/test/integration/spk-sink/: Dockerfile  spk_sink.py
orchestrator/test/scenarios/: Dockerfile  README.md  compose.yaml  scenarios.py
text-to-speech/: Dockerfile  README.md  compose.voicevox.yaml
text-to-speech/engine/voicevox/: README.md
text-to-speech/engine/voicevox/test/: README.md  compose.offline.yaml  compose.online.yaml
text-to-speech/engine/voicevox/test/tts-client/: Dockerfile  synthesize.py
text-to-speech/streamer/: Cargo.toml  Dockerfile  README.md
text-to-speech/streamer/src/: main.rs
text-to-speech/test/: .env.example  README.md
text-to-speech/test/tts-client/: synthesize.py
tts-streamer/: Dockerfile  README.md  synthesize.py
voice-activity-detection/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.toml
voice-activity-detection/src/: config.rs  denoise.rs  lib.rs  main.rs  service.rs
voice_activity_detection/: .gitignore  README.md  config.example.toml  install.sh  pyproject.toml
voice_activity_detection/src/: config.rs  detector.rs  main.rs  service.rs
wake-word-detection/: Dockerfile  README.md  shim.py
wake-word-detection/livekit-wakeword/: README.md
wake-word-detection/livekit-wakeword/runtime/: Cargo.toml  Dockerfile  README.md
wake-word-detection/livekit-wakeword/runtime/src/: config.rs  detector.rs  event_sink.rs  health.rs  main.rs  wakeword.rs  ws_client.rs
wake-word-detection/livekit-wakeword/train/: .gitignore  README.md  eval.py  pyproject.toml  requirements.txt  train.sh
wake-word-detection/livekit-wakeword/train/configs/: example.yaml  ja_example.yaml
wake-word-detection/openwakeword/: Dockerfile  README.md  requirements.txt  shim.py
wake-word-detection/openwakeword/test/: Dockerfile.probe  compose.offline.yaml  compose.online.yaml
wake-word-detection/test/: README.md  compose.yaml  probe.py
wake-word-detection/test/data/: NOTICE
wav-utils/: Cargo.toml
wav-utils/src/: lib.rs
