[package]
name = "audio-io"
version = "0.1.0"
edition = "2021"
description = "Microphone capture & speaker playback service for kklocalagent"
license = "MIT"

[[bin]]
name = "audio-io"
path = "src/main.rs"

[lib]
name = "audio_io"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
axum = { version = "0.7", features = ["ws"] }
cpal = "0.15"
rubato = "0.15"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytes = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
