[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
description = "Central event hub: receives VAD / wake-word events, drives ASR → LLM pipeline"
license = "MIT"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[lib]
name = "orchestrator"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
wav-utils = { path = "../wav-utils" }

[dev-dependencies]
# Tests spin up a tokio TCP listener to mock ollama's /api/chat
# stream end-to-end. The runtime tokio dep doesn't enable
# `net` / `io-util` directly (axum + reqwest pull them transitively
# at build time), but the test module needs to name them.
tokio = { version = "1", features = ["net", "io-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
