[package]
name = "voice-activity-detection"
version = "0.1.0"
edition = "2021"
description = "Voice activity detection service — subscribes to audio-io /mic and emits speech events"
license = "MIT"

[[bin]]
name = "voice-activity-detection"
path = "src/main.rs"

[lib]
name = "voice_activity_detection"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
webrtc-vad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
