[package]
name = "voice-activity-detection"
version = "0.1.0"
edition = "2021"
description = "Voice activity detection service — subscribes to audio-io /mic and emits speech events"
license = "MIT"

[[bin]]
name = "voice-activity-detection"
path = "src/main.rs"

[lib]
name = "voice_activity_detection"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
webrtc-vad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }
# RNNoise port (pure Rust). 480-sample @ 48 kHz frames, ML-based
# speech enhancement that suppresses fans/AC/keyboard hum without
# distorting voice. Default features pull `dasp` + `bin` + `hound`
# which we don't need (no command-line wav processor here), so trim
# to just the core lib.
nnnoiseless = { version = "0.5", default-features = false }
# FFT-based resampler. Needed because nnnoiseless processes at
# 48 kHz only and our pipeline is 16 kHz — one FftFixedInOut
# handles the 16k→48k upsample, a second handles 48k→16k.
rubato = "0.16"  # 0.x API stable + matches the FftFixedInOut docs we coded against

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
