[package]
name = "tts-streamer"
version = "0.1.0"
edition = "2021"
description = "HTTP shim that turns a text request into VOICEVOX synthesis + audio-io playback streaming"
license = "MIT"

[[bin]]
name = "tts-streamer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
