[package]
name = "livekit-wakeword-runtime"
version = "0.1.0"
edition = "2021"
description = "Wake-word detection shim backed by onnxruntime (real ORT, not tract)"
license = "MIT"

[[bin]]
name = "livekit-wakeword-runtime"
path = "src/main.rs"

[dependencies]
# Real onnxruntime via dlopen. Feature ONNX (mel + embedding) and
# classifier ONNX are loaded at startup from paths supplied by the
# caller — typically the train-side venv resources, see config.rs.
# `load-dynamic` defers libonnxruntime.so resolution to runtime
# (ORT_DYLIB_PATH or standard ldconfig paths); the Dockerfile drops
# the lib into /usr/local/lib so ldconfig picks it up.
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["ndarray", "std", "load-dynamic"] }
ndarray = "0.17"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "io-util"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
